--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head>
 
 <body>
-    <article class="card">
-        <header class="top-image">
-            <img src="./assets/images/image-omelette.jpeg" alt="Omelette image">
+    <div class="card">
+        <header>
+            <img class="top-image" src="./assets/images/image-omelette.jpeg" alt="Omelette image">
         </header>
 
         <main>
             <section class="title">
                 <h1>Simple Omelette Recipe</h1>
-                <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked to
+                <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+                    to
                     perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
             </section>
 
@@ -47,14 +48,19 @@
             <section class="instructions">
                 <h2>Instructions</h2>
                 <ol>
-                    <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they are
+                    <li><b>Beat the eggs:</b> In a bowl, beat the eggs with a pinch of salt and pepper until they
+                        are
                         well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
-                    <li><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.</li>
-                    <li><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the pan
+                    <li><b>Heat the pan:</b> Place a non-stick frying pan over medium heat and add butter or oil.
+                    </li>
+                    <li><b>Cook the omelette:</b> Once the butter is melted and bubbling, pour in the eggs. Tilt the
+                        pan
                         to ensure the eggs evenly coat the surface.</li>
-                    <li><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still slightly
+                    <li><b>Add fillings (optional):</b> When the eggs begin to set at the edges but are still
+                        slightly
                         runny in the middle, sprinkle your chosen fillings over one half of the omelette.</li>
-                    <li><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold it
+                    <li><b>Fold and serve:</b> As the omelette continues to cook, carefully lift one edge and fold
+                        it
                         over the fillings. Let it cook for another minute, then slide it onto a plate.</li>
                     <li><b>Enjoy:</b> Serve hot, with additional salt and pepper if needed.</li>
                 </ol>
@@ -87,7 +93,7 @@
         </main>
 
         <footer></footer>
-    </article>
+    </div>
 </body>
 
 </html>
